src/app/core/landing-card/landing-card.component.scss
app-faq {
  margin: -20px;
}

.row-image {
  margin: -16px 32px -16px -16px !important;
  object-fit: cover;

  border-top-left-radius: inherit;
  border-bottom-left-radius: inherit;
}

mat-card-content {
  margin: 13px 0;

  h3 {
    margin-bottom: 0;
  }

  .elements-wrapper {
    margin: -11px -10px;

    & > * {
      margin: 11px 10px;
    }
  }

  .button-wrapper {
    margin: 33px 0 17px;

    a,
    button {
      width: 220px;
    }
  }
}

.video-wrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
}

iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

